vendored_parsers/tree-sitter-vim/test/corpus/map.txt
================================================================================
Simple mapping
================================================================================

map a b

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side)))

================================================================================
Mapping with multiple items on left and right
================================================================================

map ab cd

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side)))

================================================================================
All map commands
================================================================================

map a b
nmap a b
vmap a b
xmap a b
smap a b
omap a b
imap a b
lmap a b
cmap a b
tmap a b
noremap a b
nnoremap a b
vnoremap a b
xnoremap a b
snoremap a b
onoremap a b
inoremap a b
lnoremap a b
cnoremap a b
tnoremap a b

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side)))

================================================================================
Map expression
================================================================================

map <expr> a foobar() + 31

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (binary_operation
      (call_expression
        (identifier))
      (integer_literal))))

================================================================================
Map options
================================================================================

map <buffer> a b
map <nowait> a b
map <silent> a b
map <script> a b
map <unique> a b

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side)))

================================================================================
Map options combined
================================================================================

map <buffer> <unique> a b
map <unique> <buffer> a b

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side)))

================================================================================
Quoted map expr
================================================================================

map <expr> [a ":\<C-U>" . v:count1 . "prev\<CR>"

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (binary_operation
      (string_literal)
      (binary_operation
        (scoped_identifier
          (scope)
          (identifier))
        (string_literal)))))

================================================================================
Quoted non-expr map
================================================================================

map [a "foobar

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side)))

================================================================================
Map with spaces rhs
================================================================================

map a foo bar bax

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side)))

================================================================================
Map with keycode
================================================================================

map <C-b> foo<CR>bar

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode))))

================================================================================
Map bar
================================================================================

if a | nnoremap b c | endif

--------------------------------------------------------------------------------

(script_file
  (if_statement
    (identifier)
    (body
      (map_statement
        (map_side)
        (map_side)))))

================================================================================
Map included bar
================================================================================

map a b\|b
nnoremap a <cmd>echo 1\|echo 2<Cr>
nnoremap a :echo 1\|echo 2<Cr>
vmap <Leader>a <cmd>echo "statement1"\|echo "statement2"<cr>

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side
      (keycode)
      (echo_statement
        (integer_literal))
      (echo_statement
        (integer_literal))
      (keycode)))
  (map_statement
    (map_side)
    (map_side
      (keycode)))
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode)
      (echo_statement
        (string_literal))
      (echo_statement
        (string_literal))
      (keycode))))

================================================================================
Map containing `<`
================================================================================

map < <gv
map > >gv
map <<CR> <g<v<cr>
map ><cr> >g>v<cr>

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side)
    (map_side))
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode)))
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode))))

================================================================================
Map with modifiers
================================================================================

map <C-s-CR> :echo new<CR>
map <C-s-a> :echo new<CR>
map <C-s-CR> <cmd>echo new<CR>
map <C-s-a> <cmd>echo new<CR>

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode)))
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode)))
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode)
      (echo_statement
        (identifier))
      (keycode)))
  (map_statement
    (map_side
      (keycode))
    (map_side
      (keycode)
      (echo_statement
        (identifier))
      (keycode))))

================================================================================
Map bar
================================================================================

map f <cmd>echo "foo" <bar> echo "bar"<CR>
map f <cmd>echo "foobar" <Bar> echo "foobaz"<CR>

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side
      (keycode)
      (echo_statement
        (string_literal))
      (keycode)
      (echo_statement
        (string_literal))
      (keycode)))
  (map_statement
    (map_side)
    (map_side
      (keycode)
      (echo_statement
        (string_literal))
      (keycode)
      (echo_statement
        (string_literal))
      (keycode))))

================================================================================
Map with colon
================================================================================

map f :<C-U><CR>
map f :<C-P><CR>

--------------------------------------------------------------------------------

(script_file
  (map_statement
    (map_side)
    (map_side
      (keycode)
      (keycode)))
  (map_statement
    (map_side)
    (map_side
      (keycode)
      (keycode))))
