vendored_parsers/tree-sitter-vim/test/corpus/runtime_statement.txt
================================================================================
Runtime basic
================================================================================

runtime syntax/
runtime! syntax/

--------------------------------------------------------------------------------

(script_file
  (runtime_statement
    (filenames
      (filename)))
  (runtime_statement
    (bang)
    (filenames
      (filename))))

================================================================================
Runtime multiple files
================================================================================

runtime syntax/.vim plugin/syntax.vim
runtime! syntax/spell.vim plugins syntax

--------------------------------------------------------------------------------

(script_file
  (runtime_statement
    (filenames
      (filename)
      (filename)))
  (runtime_statement
    (bang)
    (filenames
      (filename)
      (filename)
      (filename))))

================================================================================
Runtime with where
================================================================================

runtime START syntax/
runtime OPT syntax/
runtime PACK syntax/
runtime ALL syntax/

--------------------------------------------------------------------------------

(script_file
  (runtime_statement
    (where)
    (filenames
      (filename)))
  (runtime_statement
    (where)
    (filenames
      (filename)))
  (runtime_statement
    (where)
    (filenames
      (filename)))
  (runtime_statement
    (where)
    (filenames
      (filename))))

================================================================================
Runtime with wildcard
================================================================================

runtime plugin/**/*.vim
runtime plugin/plug*/*.vim

--------------------------------------------------------------------------------

(script_file
  (runtime_statement
    (filenames
      (filename)))
  (runtime_statement
    (filenames
      (filename))))

================================================================================
Runtime with white-space
================================================================================

runtime plugin/\ .vim
runtime plugin/plug/plug\ in.vim

--------------------------------------------------------------------------------

(script_file
  (runtime_statement
    (filenames
      (filename)))
  (runtime_statement
    (filenames
      (filename))))
