vendored_parsers/tree-sitter-vim/test/corpus/scan_separator.txt
================================================================================
Simple global
================================================================================

g/abc/echo "foo"

g|abc|echo "foo"

--------------------------------------------------------------------------------

(script_file
  (global_statement
    (pattern)
    (echo_statement
      (string_literal)))
  (global_statement
    (pattern)
    (echo_statement
      (string_literal))))

================================================================================
Global with double quotes
================================================================================

g"foo"echo "bar"

--------------------------------------------------------------------------------

(script_file
  (global_statement
    (pattern)
    (echo_statement
      (string_literal))))

================================================================================
Global with pattern
================================================================================

g:^contain\(edin\|s\)=\("String with spaces and	tabs"\)\+:echo "bar"

--------------------------------------------------------------------------------

(script_file
  (global_statement
    (pattern
      (pattern)
      (pattern)
      (pattern_multi))
    (echo_statement
      (string_literal))))

================================================================================
Global with range
================================================================================

1,+g/abc/echo "foo"

--------------------------------------------------------------------------------

(script_file
  (global_statement
    (range
      (integer_literal)
      (next_line))
    (pattern)
    (echo_statement
      (string_literal))))
